overlap & centering cards fixed

--- a/css/style.css
+++ b/css/style.css
@@ -10884,26 +10884,26 @@ footer {
   padding: 20px 0;
 }
 
-.card-wrapper {
-  z-index: -1;
-  padding-top: 0;
-  margin-top: -80px;
-  position: absolute;
-  left: 0;
-  right: 0;
-  margin: -20 auto 0;
-}
-
-.absolute-wrapper {
-  position: relative;
-  width: 100%;
-  height: auto;
-}
-
 .card {
   padding: 0;
   border-radius: 0;
   border-style: none;
+  margin: 0 auto;
+}
+
+.card_image {
+  overflow: hidden;
+}
+
+.card_image img {
+  width: 100%;
+  max-height: 200px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.card-body {
+  height: 120px;
 }
 
 h1 {
@@ -10967,15 +10967,51 @@ p .price {
   font-size: 1.8rem;
   display: absolute;
   z-index: 1;
+  margin-top: -25px;
+}
+
+#button-top {
+  margin-bottom: 25px;
 }
 
 .header-container {
   position: relative;
 }
 
+header {
+  width: 100%;
+  margin-bottom: -120px;
+}
+
+.header-container {
+  width: 100%;
+  max-width: 1200px;
+  height: 500px;
+  margin: 0 auto;
+}
+
+.header-container_image {
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .opacity {
   position: absolute;
-  height: 400px;
+  height: 500px;
   width: 100%;
   top: 0;
   bottom: 0;
