--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,5 +1,19 @@
+
 .card {
     padding: 0;
     border-radius: 0;
     border-style: none;
+    margin: 0 auto;
+}
+.card_image {
+    overflow: hidden;
+}
+.card_image img {
+    width: 100%;
+    max-height: 200px;
+    
+    object-fit: cover;
+}
+.card-body {
+    height: 120px;
 }
