--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -18,17 +18,3 @@ section {
 footer {
     padding: 20px 0;
 }
-.card-wrapper {
-    z-index: -1;
-    padding-top: 0;
-    margin-top: -80px;
-    position: absolute;
-    left: 0;
-    right: 0;
-    margin: -20 auto 0;
-}
-.absolute-wrapper {
-    position: relative;
-    width: 100%;
-    height: auto;
-}
